--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-test",
+	"name": "my-app",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -12,16 +12,18 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"svelte": "^3.44.0",
-		"vite": "^2.9.13"
+		"vite": "^3.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@codemirror/lang-javascript": "github:codemirror/lang-javascript",
+		"@codemirror/commands": "^6.0.1",
+		"@codemirror/state": "^6.1.0",
 		"@codemirror/theme-one-dark": "^6.0.0",
+		"@codemirror/view": "^6.1.1",
 		"codemirror": "^6.0.1",
-		"xterm": "^4.20.0-beta.6",
+		"xterm": "^4.19.0",
 		"y-codemirror.next": "^0.3.0",
 		"y-webrtc": "^10.2.3",
-		"yjs": "^13.5.39"
+		"yjs": "^13.5.40"
 	}
 }
