--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@codemirror/view": "^6.1.1",
 		"codemirror": "^6.0.1",
 		"xterm": "^4.19.0",
+		"xterm-addon-attach": "^0.6.0",
 		"y-codemirror.next": "^0.3.0",
 		"y-webrtc": "^10.2.3",
 		"yjs": "^13.5.40"
