--- a/package.json
+++ b/package.json
@@ -1,30 +1,17 @@
 {
 	"name": "my-app",
 	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"package": "svelte-kit package",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync"
+		"preview": "vite preview"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"svelte": "^3.44.0",
-		"vite": "^3.0.0"
+		"vite": "^3.0.4"
 	},
-	"type": "module",
-	"dependencies": {
-		"@codemirror/commands": "^6.0.1",
-		"@codemirror/state": "^6.1.0",
-		"@codemirror/theme-one-dark": "^6.0.0",
-		"@codemirror/view": "^6.1.1",
-		"codemirror": "^6.0.1",
-		"xterm": "^4.19.0",
-		"xterm-addon-fit": "^0.5.0",
-		"y-codemirror.next": "^0.3.0",
-		"y-webrtc": "^10.2.3",
-		"yjs": "^13.5.40"
-	}
+	"type": "module"
 }
