--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-app",
+	"name": "editor",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -11,10 +11,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"svelte": "^3.44.0",
-		"vite": "^3.0.4"
+		"vite": "^3.1.0-beta.1"
 	},
-	"type": "module",
-	"dependencies": {
-		"@wasmer/wasi": "^1.1.1"
-	}
+	"type": "module"
 }
