--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
 		"svelte": "^3.44.0",
 		"vite": "^3.1.0-beta.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@wasmer/wasi": "^1.1.2"
+	}
 }
