--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
-		"vite": "^3.1.0-beta.1"
+		"vite": "^3.1.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"@wasmer/wasi": "^1.1.2"
-	}
+	"type": "module"
 }
