add Xterm and Codemirror

--- a/package.json
+++ b/package.json
@@ -20,5 +20,19 @@
 		"svelte": "^3.44.0",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@codemirror/commands": "^6.1.0",
+		"@codemirror/state": "^6.1.1",
+		"@codemirror/theme-one-dark": "^6.1.0",
+		"@codemirror/view": "^6.2.3",
+		"@wasmer/wasi": "^1.1.2",
+		"buffer": "^6.0.3",
+		"codemirror": "^6.0.1",
+		"xterm": "^4.19.0",
+		"xterm-addon-fit": "^0.5.0",
+		"y-codemirror.next": "^0.3.2",
+		"y-webrtc": "^10.2.3",
+		"yjs": "^13.5.41"
+	}
 }
