--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"codemirror": "^6.0.1",
 		"xterm": "^4.19.0",
 		"xterm-addon-fit": "^0.5.0",
+		"xterm-readline": "^1.0.7",
 		"y-codemirror.next": "^0.3.2",
 		"y-webrtc": "^10.2.3",
 		"yjs": "^13.5.41"
