--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"@codemirror/commands": "^6.1.0",
+		"@codemirror/lang-cpp": "^6.0.1",
 		"@codemirror/state": "^6.1.1",
 		"@codemirror/theme-one-dark": "^6.1.0",
 		"@codemirror/view": "^6.2.3",
