--- a/package.json
+++ b/package.json
@@ -6,39 +6,43 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"autoprefixer": "^10.4.11",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"autoprefixer": "^10.4.12",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.16",
+		"postcss": "^8.4.17",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
+		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.8",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@codemirror/commands": "^6.1.0",
+		"@codemirror/commands": "^6.1.1",
 		"@codemirror/lang-cpp": "^6.0.1",
-		"@codemirror/state": "^6.1.1",
+		"@codemirror/state": "^6.1.2",
 		"@codemirror/theme-one-dark": "^6.1.0",
-		"@codemirror/view": "^6.2.3",
+		"@codemirror/view": "^6.3.0",
 		"@wasmer/wasi": "^1.1.2",
 		"buffer": "^6.0.3",
 		"codemirror": "^6.0.1",
 		"xterm": "^5.0.0",
 		"xterm-addon-fit": "^0.6.0",
-		"xterm-addon-webgl": "^0.13.0",
-		"y-codemirror.next": "^0.3.2",
-		"y-webrtc": "^10.2.3",
-		"yjs": "^13.5.41"
+		"xterm-addon-webgl": "^0.13.0"
 	}
 }
